// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match btn 1`] = `
<div>
  <button
    className="btn"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnBlue 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-blue"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-blue hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-blue focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-blue selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-blue disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnDanger 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-danger"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-danger hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-danger focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-danger selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-danger disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnOutline 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-outline"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-outline hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-outline focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-outline selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-outline disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPrimary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-primary"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-primary hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-primary focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-primary selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-primary disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnSecondary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-secondary"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-secondary hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-secondary focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-secondary selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-secondary disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match link 1`] = `
<div>
  <a
    className="btn"
    href="#url"
    role="button"
  >
    Button
  </a>
</div>
`;
